# coronavirus_structural_task_force

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml
data/: directory_info.txt
data/dataframes/: directory_info.txt
data/fasta/: H3N2  Influenza_A.fasta  directory_info.txt  seq_SARS-CoV.fasta
data/weekly_reports/: 2026-04-08_update_report.txt  2026-04-15_update_report.txt  latest_update_report.txt
docs/source/: conf.py  index.rst
pdb/exonuclease/: sequence_info.fasta
pdb/helicase-nsp7-nsp8-nsp9-rna_polymerase/: sequence_info.fasta
pdb/leader_protein/: sequence_info.fasta
pdb/membrane_glycoprotein/: sequence_info.fasta
pdb/nsp2/: sequence_info.fasta
pdb/nsp7-nsp8-nsp9-rna_polymerase/: sequence_info.fasta
pdb/orf9a/: sequence_info.fasta
pdb/orf9b/: sequence_info.fasta
scripts/: directory_info.txt  update_pipeline_run.py
src/: directory_info.txt
src/coronavirus_structural_task_force.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cstf/: directory_info.txt
tests/: conftest.py  directory_info.txt  test.ipynb  test_io.py  test_query.py  test_report.py
tests/test_data/: directory_info.txt
utils/: EM.csv  General.csv  MX.csv  NMR.csv  emList.txt  mxList.txt  stats.csv  stats.db
utils/Update_pipeline/: analyze_and_fix_dataframe.py  config.py  io.py  main_repo_database_SARS-CoV-2.pkl  main_repo_database_SARS-CoV.pkl  query.py  report.py  requirements.txt  tcp_main.py  tcp_run.py  tcp_scan_results.py  utilities.py
utils/database/: EM.csv  General.csv  MX.csv  NMR.csv  emList.txt  mxList.txt  populate_database2.py  (+2 more)
(+15867 files in other folders)
