[project]
name = "coronavirus-structural-task-force"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "bio>=1.8.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rcsb-api>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
