[project]
name = "coronavirus-structural-task-force"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "bio>=1.8.1",
    "gemmi>=0.7.4",
    "grequests>=0.7.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rcsb-api>=1.5.0",
    "regex>=2025.11.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
]

dev = [
    "myst-parser>=4.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
]
